Added code for https://jstobigdata.com/rabbitmq/headers-exchange-in-amqp-rabbitmq/

--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
   <version>1.0-SNAPSHOT</version>
 
   <modules>
-    <module>getting-started</module>
+    <module>00-getting-started</module>
   </modules>
 
   <properties>
