--- a/01-spring-boot-amqp/pom.xml
+++ b/01-spring-boot-amqp/pom.xml
@@ -9,15 +9,17 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>00-getting-started</artifactId>
-  <description>RabbitMQ code examples using the amqp-client</description>
+  <artifactId>01-spring-boot-amqp</artifactId>
 
   <dependencies>
     <dependency>
-      <groupId>com.rabbitmq</groupId>
-      <artifactId>amqp-client</artifactId>
-      <version>5.8.0</version>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.amqp</groupId>
+      <artifactId>spring-rabbit-test</artifactId>
+      <scope>test</scope>
     </dependency>
   </dependencies>
-
 </project>
